--- a/index.html
+++ b/index.html
@@ -54,22 +54,156 @@
       </div>
     </div>
 
-    <main class="main"></main>
+    <main class="main">
+      <section class="news-Block">
+        <div class="news-Container container">
+          <div class="news-Heading">
+            <h2 class="news-Title st-Title">NEWS</h2>
+          </div>
+          <div class="news-Contents_area">
+            <div class="news-Content">
+              <time class="news-Time">2030.02.01</time>
+              <div class="news-Label">お知らせ</div>
+              <div class="news-Text">Webデザインニュースサイト「ウェブマガジン」に取材いただきました</div>
+            </div>
+            <div class="news-Content">
+              <time class="news-Time">2030.01.25</time>
+              <div class="news-Label">制作実績</div>
+              <div class="news-Text">Smoothiesta様のWebサイトを制作いたしました</div>
+            </div>
+            <div class="news-Content">
+              <time class="news-Time">2030.01.20</time>
+              <div class="news-Label">採用</div>
+              <div class="news-Text">Webデザイナーを1名募集中です!</div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="sevice-Block">
+        <div class="service-Container container">
+          <div class="service-Heading">
+            <h2 class="service-Title st-Title">SERVICE</h2>
+          </div>
+          <div class="service-Area">
+            <div class="service-Content">
+              <img src="assets/images/service_1.png" alt="">
+              <div class="service-Name">Webサイト制作</div>
+              <p class="service-Text">新規サイトの制作はもちろんサイトリニューアルやランディングページの制作も可能です。</p>
+            </div>
+            <div class="service-Content">
+              <img src="assets/images/service_2.png" alt="">
+              <div class="service-Name">Webサイト運用</div>
+              <p class="service-Text">サイトの更新作業や独自のアクセス解析に基づいたサイト改善のご提案をいたします。</p>
+            </div>
+            <div class="service-Content">
+              <img src="assets/images/service_3.png" alt="">
+              <div class="service-Name">アプリ開発</div>
+              <p class="service-Text">スマートフォンアプリ開発の他、Vue.jsやReactによるWebアプリの開発が可能です。</p>
+            </div>
+          </div>
+          <div class="service-Link_area st-Link_btn">
+            <a class="service-Link" href="">More</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="works-Block">
+        <div class="works-Container container">
+          <div class="works-Inner">
+            <div class="works-Img_area">
+              <div class="swiper-container js-swiper-container">
+                <div class="swiper-wrapper">
+                  <img class="swiper-slide" src="assets/images/works_smoothiesta.png" alt="">
+                  <img class="swiper-slide" src="assets/images/works_web_conference.png" alt="">
+                  <img class="swiper-slide" src="assets/images/works_lamina.png" alt="">
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+              </div>       
+            </div>
+            <div class="works-text_area">
+              <div class="works-Heading">
+                <h2 class="works-Title st-Title">WORKS</h2>
+              </div>
+              <p class="works-text">様々なジャンルのWebサイト制作が可能です。ご購入やお申込み数の増加などを実現します!</p>
+              <div class="works-Link_area st-Link_btn">
+                <a class="works-Link" href="">More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="company-Block">
+        <div class="company-Container container">
+          <div class="company-Heading">
+            <h2 class="company-Title st-Title">COMPANY</h2>
+          </div>
+          <div class="company-Text_area">
+            <p class="company-Text">お客様の夢を叶えること。
+              それがWebサイトのゴールであり、私たちが目指すことです。
+              だからこそちゃんと成果を出すサイトを全力でお作りします。
+              お客様の笑顔を見たい。
+              夢を実現する手助けをさせてください。
+            </p>
+          </div>
+          <div class="company-Link_area st-Link_btn">
+            <a class="company-Link" href="">More</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="recruit-Block">
+        <div class="recruit-Container container">
+          <div class="recruit-Inner">
+            <div class="recruit-Text_area">
+              <div class="recruit-Heading">
+                <h2 class="recruit-Title st-Title">RECRUIT</h2>
+                <p class="recruit-Text">私たちと一緒に働きませんか？</p>
+              </div>
+              <div class="recruit-Link_area st-Link_btn">
+                <a class="recruit-Link" href="">More</a>
+              </div>
+            </div>
+            <div class="recruit-Img_area">
+              <img src="assets/images/recruit.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="contact-Block">
+        <div class="contact-Container container">
+          <div class="contact-Heading">
+            <h2 class="contact-Title st-Title">CONTACT</h2>
+            <p class="contact-Text">Webサイトの制作のご依頼やお見積りなど、お気軽にご相談ください。</p>
+          </div>
+          <div class="contact-Link_area st-Link_btn">
+            <a class="contact-Link" href="">More</a>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer class="footer">
-      <div class="footer-container container">
+      <div class="footer-Container container">
         <nav class="footer-Nav">
           <ul class="footer-Nav_list">
-            <li class="footer-Nav_item"><a href="" class="footer-Nav_link">NEWS</a></li>
-            <li class="footer-Nav_item"><a href="" class="footer-Nav_link">SERVICE</a></li>
-            <li class="footer-Nav_item"><a href="" class="footer-Nav_link">WORKS</a></li>
-            <li class="footer-Nav_item"><a href="" class="footer-Nav_link">COMPANY</a></li>
-            <li class="footer-Nav_item"><a href="" class="footer-Nav_link">RECRUIT</a></li>
-            <li class="footer-Nav_item"><a href="" class="footer-Nav_link">CONTACT</a></li>
+            <li class="footer-Nav_item"><a href="news.html" class="footer-Nav_link">NEWS</a></li>
+            <li class="footer-Nav_item"><a href="service.html" class="footer-Nav_link">SERVICE</a></li>
+            <li class="footer-Nav_item"><a href="works.html" class="footer-Nav_link">WORKS</a></li>
+            <li class="footer-Nav_item"><a href="company.html" class="footer-Nav_link">COMPANY</a></li>
+            <li class="footer-Nav_item"><a href="recruit.html" class="footer-Nav_link">RECRUIT</a></li>
+            <li class="footer-Nav_item"><a href="contact.html" class="footer-Nav_link">CONTACT</a></li>
           </ul>
         </nav>
+        <small class="copyright">© PON DESIGN</small>
       </div>
     </footer>
+
+    <script src="assets/js/script.js"></script>
   </div>
 </body>
 </html>
