feat: newsページ作成

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </header>
 
-    <div class="top-Hero_block">
+    <div id="header-Fix" class="top-Hero_block">
       <div class="top-Hero_container container">
         <div class="hero-Heading">
           <div class="hero-Title">
@@ -69,11 +69,11 @@
       <section class="news-Block">
         <div class="news-Container container">
           <div class="news-Heading">
-            <h2 class="news-Title st-Title">NEWS</h2>
+            <h2 class="news-Title st-Sec_title">NEWS</h2>
           </div>
           <div class="news-Contents_area">
-            <div class="news-Content">
-              <div class="news-Content_list">
+            <div class="news-Content st-News_list">
+              <div class="news-Content_list st-News_item">
                 <time class="news-Time">2030.02.01</time>
                 <div class="news-Label">お知らせ</div>
               </div>
@@ -100,7 +100,7 @@
       <section class="service-Block">
         <div class="service-Container container">
           <div class="service-Heading">
-            <h2 class="service-Title st-Title">SERVICE</h2>
+            <h2 class="service-Title st-Sec_title">SERVICE</h2>
           </div>
           <div class="service-Area">
             <div class="service-Content">
@@ -142,7 +142,7 @@
             </div>
             <div class="works-Text_area">
               <div class="works-Heading">
-                <h2 class="works-Title st-Title">WORKS</h2>
+                <h2 class="works-Title st-Sec_title">WORKS</h2>
               </div>
               <p class="works-text">様々なジャンルのWebサイト制作が可能です。<br>ご購入やお申込み数の増加などを実現します!</p>
               <div class="works-Link_area st-Link_btn">
@@ -156,7 +156,7 @@
       <section class="company-Block">
         <div class="company-Container container">
           <div class="company-Heading">
-            <h2 class="company-Title st-Title">COMPANY</h2>
+            <h2 class="company-Title st-Sec_title">COMPANY</h2>
           </div>
           <div class="company-Message">
             <span class="company-Message_text">サイトのゴール =<br class="sp-Line"> 夢を叶えること</span>
@@ -180,7 +180,7 @@
           <div class="recruit-Inner">
             <div class="recruit-Text_area">
               <div class="recruit-Heading">
-                <h2 class="recruit-Title st-Title">RECRUIT</h2>
+                <h2 class="recruit-Title st-Sec_title">RECRUIT</h2>
                 <p class="recruit-Text">私たちと一緒に働きませんか？</p>
                 <div class="recruit-Link_area st-Link_btn">
                   <a class="recruit-Link" href="recruit.html">More</a>
@@ -194,11 +194,11 @@
         </div>
       </section>
 
-      <section class="contact-Block">
-        <div class="contact-Container container">
-          <div class="contact-Heading">
-            <h2 class="contact-Title st-Title">CONTACT</h2>
-            <p class="contact-Text">Webサイトの制作のご依頼やお見積りなど、<br class="sp-Line">お気軽にご相談ください。</p>
+      <section class="contact-Block st-Contact_block">
+        <div class="contact-Container st-Contact_container container">
+          <div class="contact-Heading st-Contact_heading">
+            <h2 class="contact-Title st-Contact_title st-Sec_title">CONTACT</h2>
+            <p class="contact-Text st-Contact_text">Webサイトの制作のご依頼やお見積りなど、<br class="sp-Line">お気軽にご相談ください。</p>
           </div>
           <div class="contact-Link_area st-Link_btn">
             <a class="contact-Link" href="contact.html">More</a>
